Disable title bar when window is disabled

--- a/SPRNetTool/View/Widgets/WindowTitleBar.xaml
+++ b/SPRNetTool/View/Widgets/WindowTitleBar.xaml
@@ -347,6 +347,10 @@
 						Style="{StaticResource WindowControlButton}" />
 			</StackPanel>
 
+			<Rectangle x:Name="DisableLayer"
+					Grid.ColumnSpan="2"
+					Fill="#30808080"
+					Visibility="Collapsed" />
 		</Grid>
 
 	</Border>
