[#324] Triển khai giao diện cho màn hình Login - Open a pull request (#336)

--- a/SPRNetTool/Definitions.xaml
+++ b/SPRNetTool/Definitions.xaml
@@ -902,190 +902,191 @@
 				Value="Transparent" />
 		<Setter Property="WindowStyle"
 				Value="None" />
-		<Setter Property="ResizeMode"
+        <Setter Property="ResizeMode"
 				Value="CanResizeWithGrip" />
 
-		<Setter Property="Template">
+        <Setter Property="Template">
 			<Setter.Value>
-				<ControlTemplate TargetType="{x:Type Window}">
-					<Border x:Name="MainBorderContainer"
+                <ControlTemplate TargetType="{x:Type Window}">
+                    <Border x:Name="MainBorderContainer"
 							Width="{TemplateBinding Width}"
 							Height="{TemplateBinding Height}"
 							Background="Transparent">
 
-						<Border.LayoutTransform>
-							<ScaleTransform x:Name="MainBorderCtn_ScaleTransform"
+                        <Border.LayoutTransform>
+                            <ScaleTransform x:Name="MainBorderCtn_ScaleTransform"
 											ScaleX="1"
 											ScaleY="1" />
-						</Border.LayoutTransform>
+                        </Border.LayoutTransform>
 
-						<Grid>
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition x:Name="LeftShadowColumnDef"
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition x:Name="LeftShadowColumnDef"
 												  Width="5" />
-								<ColumnDefinition Width="*" />
-								<ColumnDefinition x:Name="RightShadowColumnDef"
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition x:Name="RightShadowColumnDef"
 												  Width="5" />
-							</Grid.ColumnDefinitions>
-							<Grid.RowDefinitions>
-								<RowDefinition Height="*" />
-								<RowDefinition x:Name="BotShadowRowDef"
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                                <RowDefinition x:Name="BotShadowRowDef"
 											   Height="5" />
-							</Grid.RowDefinitions>
+                            </Grid.RowDefinitions>
 
-							<!--Content and title bar field-->
-							<Border BorderThickness="1"
-									BorderBrush="{StaticResource ResourceKey={x:Static local:Definitions.ButtonAndIconBrushLevel0}}"
-									Grid.Column="1">
-								<Grid x:Name="ContentAndTitleGrid"
+                            <!--Content and title bar field-->
+                            <Border BorderThickness="1"
+									BorderBrush="{TemplateBinding BorderBrush}"
+									Grid.Column="1"
+                                    x:Name="ContentBorder">
+                                <Grid x:Name="ContentAndTitleGrid"
 									  Background="{TemplateBinding Background}">
-									<Grid.RowDefinitions>
-										<RowDefinition Height="Auto" />
-										<RowDefinition Height="*" />
-									</Grid.RowDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="*" />
+                                    </Grid.RowDefinitions>
 
-									<!--Title bar-->
-									<Grid x:Name="TitleBartGrid"
+                                    <!--Title bar-->
+                                    <Grid x:Name="TitleBartGrid"
 										  Grid.Row="0"
 										  Height="{Binding ElementName=WindowTitleBar, Path=WindowBarHeight}"
 										  Background="{StaticResource ResourceKey={x:Static local:Definitions.PanelBackgroundLevel0_4}}"
 										  VerticalAlignment="Stretch">
 
-										<Grid.ColumnDefinitions>
-											<!--Title-->
-											<ColumnDefinition Width="*" />
-											<!--Windows Button-->
-											<ColumnDefinition Width="Auto" />
+                                        <Grid.ColumnDefinitions>
+                                            <!--Title-->
+                                            <ColumnDefinition Width="*" />
+                                            <!--Windows Button-->
+                                            <ColumnDefinition Width="Auto" />
 
-										</Grid.ColumnDefinitions>
+                                        </Grid.ColumnDefinitions>
 
-										<wg:WindowTitleBar x:Name="WindowTitleBar"
+                                        <wg:WindowTitleBar x:Name="WindowTitleBar"
 														   WindowBarHeight="69"
 														   Height="{Binding ElementName=WindowTitleBar, Path=WindowBarHeight}" />
 
-									</Grid>
+                                    </Grid>
 
-									<!--Content field-->
+                                    <!--Content field-->
 
-									<ContentPresenter x:Name="DWContentPresenter"
+                                    <ContentPresenter x:Name="DWContentPresenter"
 													  Margin="{TemplateBinding Padding}"
 													  Content="{TemplateBinding Content}"
 													  Visibility="Visible"
 													  Grid.Row="1">
-									</ContentPresenter>
+                                    </ContentPresenter>
 
-								</Grid>
-							</Border>
-							<!--Shadow effect-->
-							<!--Must use radient due to performance issue-->
-							<!--link: https://www.telerik.com/forums/extremely-slow-when-having-dropshadow-->
-							<Rectangle Grid.Column="0"
+                                </Grid>
+                            </Border>
+                            <!--Shadow effect-->
+                            <!--Must use radient due to performance issue-->
+                            <!--link: https://www.telerik.com/forums/extremely-slow-when-having-dropshadow-->
+                            <Rectangle Grid.Column="0"
 									   Grid.RowSpan="1">
-								<Rectangle.Fill>
-									<LinearGradientBrush EndPoint="0.5,1"
+                                <Rectangle.Fill>
+                                    <LinearGradientBrush EndPoint="0.5,1"
 														 StartPoint="0.5,0">
-										<LinearGradientBrush.RelativeTransform>
-											<TransformGroup>
-												<ScaleTransform CenterY="0.5"
+                                        <LinearGradientBrush.RelativeTransform>
+                                            <TransformGroup>
+                                                <ScaleTransform CenterY="0.5"
 																CenterX="0.5" />
-												<SkewTransform CenterX="0.5"
+                                                <SkewTransform CenterX="0.5"
 															   CenterY="0.5" />
-												<RotateTransform Angle="90"
+                                                <RotateTransform Angle="90"
 																 CenterX="0.5"
 																 CenterY="0.5" />
-												<TranslateTransform />
-											</TransformGroup>
-										</LinearGradientBrush.RelativeTransform>
-										<GradientStop Color="#25000000" />
-										<GradientStop Color="#00000000"
+                                                <TranslateTransform />
+                                            </TransformGroup>
+                                        </LinearGradientBrush.RelativeTransform>
+                                        <GradientStop Color="#25000000" />
+                                        <GradientStop Color="#00000000"
 													  Offset="1" />
-									</LinearGradientBrush>
-								</Rectangle.Fill>
-							</Rectangle>
-							<Rectangle Grid.Column="1"
+                                    </LinearGradientBrush>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                            <Rectangle Grid.Column="1"
 									   Grid.Row="1"
 									   Grid.ColumnSpan="1">
-								<Rectangle.Fill>
-									<LinearGradientBrush EndPoint="0.5,1"
+                                <Rectangle.Fill>
+                                    <LinearGradientBrush EndPoint="0.5,1"
 														 StartPoint="0.5,0">
-										<GradientStop Color="#25000000" />
-										<GradientStop Color="#00000000"
+                                        <GradientStop Color="#25000000" />
+                                        <GradientStop Color="#00000000"
 													  Offset="1" />
-									</LinearGradientBrush>
-								</Rectangle.Fill>
-							</Rectangle>
-							<Rectangle Grid.Column="2"
+                                    </LinearGradientBrush>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                            <Rectangle Grid.Column="2"
 									   Grid.RowSpan="1">
-								<Rectangle.Fill>
-									<LinearGradientBrush EndPoint="0.5,1"
+                                <Rectangle.Fill>
+                                    <LinearGradientBrush EndPoint="0.5,1"
 														 StartPoint="0.5,0">
-										<LinearGradientBrush.RelativeTransform>
-											<TransformGroup>
-												<ScaleTransform CenterY="0.5"
+                                        <LinearGradientBrush.RelativeTransform>
+                                            <TransformGroup>
+                                                <ScaleTransform CenterY="0.5"
 																CenterX="0.5" />
-												<SkewTransform CenterX="0.5"
+                                                <SkewTransform CenterX="0.5"
 															   CenterY="0.5" />
-												<RotateTransform Angle="-90"
+                                                <RotateTransform Angle="-90"
 																 CenterX="0.5"
 																 CenterY="0.5" />
-												<TranslateTransform />
-											</TransformGroup>
-										</LinearGradientBrush.RelativeTransform>
-										<GradientStop Color="#25000000" />
-										<GradientStop Color="#00000000"
+                                                <TranslateTransform />
+                                            </TransformGroup>
+                                        </LinearGradientBrush.RelativeTransform>
+                                        <GradientStop Color="#25000000" />
+                                        <GradientStop Color="#00000000"
 													  Offset="1" />
-									</LinearGradientBrush>
-								</Rectangle.Fill>
-							</Rectangle>
-							<Rectangle Grid.Row="1">
-								<Rectangle.Fill>
-									<LinearGradientBrush EndPoint="0.5,1"
+                                    </LinearGradientBrush>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                            <Rectangle Grid.Row="1">
+                                <Rectangle.Fill>
+                                    <LinearGradientBrush EndPoint="0.5,1"
 														 StartPoint="0.5,0">
-										<LinearGradientBrush.RelativeTransform>
-											<TransformGroup>
-												<ScaleTransform CenterY="0.5"
+                                        <LinearGradientBrush.RelativeTransform>
+                                            <TransformGroup>
+                                                <ScaleTransform CenterY="0.5"
 																CenterX="0.5" />
-												<SkewTransform CenterX="0.5"
+                                                <SkewTransform CenterX="0.5"
 															   CenterY="0.5" />
-												<RotateTransform Angle="45"
+                                                <RotateTransform Angle="45"
 																 CenterX="0.5"
 																 CenterY="0.5" />
-												<TranslateTransform />
-											</TransformGroup>
-										</LinearGradientBrush.RelativeTransform>
-										<GradientStop Color="#19000000" />
-										<GradientStop Color="#00000000"
+                                                <TranslateTransform />
+                                            </TransformGroup>
+                                        </LinearGradientBrush.RelativeTransform>
+                                        <GradientStop Color="#19000000" />
+                                        <GradientStop Color="#00000000"
 													  Offset="1" />
-									</LinearGradientBrush>
-								</Rectangle.Fill>
-							</Rectangle>
-							<Rectangle Grid.Row="1"
+                                    </LinearGradientBrush>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                            <Rectangle Grid.Row="1"
 									   Grid.Column="2">
-								<Rectangle.Fill>
-									<LinearGradientBrush EndPoint="0.5,1"
+                                <Rectangle.Fill>
+                                    <LinearGradientBrush EndPoint="0.5,1"
 														 StartPoint="0.5,0">
-										<LinearGradientBrush.RelativeTransform>
-											<TransformGroup>
-												<ScaleTransform CenterY="0.5"
+                                        <LinearGradientBrush.RelativeTransform>
+                                            <TransformGroup>
+                                                <ScaleTransform CenterY="0.5"
 																CenterX="0.5" />
-												<SkewTransform CenterX="0.5"
+                                                <SkewTransform CenterX="0.5"
 															   CenterY="0.5" />
-												<RotateTransform Angle="-45"
+                                                <RotateTransform Angle="-45"
 																 CenterX="0.5"
 																 CenterY="0.5" />
-												<TranslateTransform />
-											</TransformGroup>
-										</LinearGradientBrush.RelativeTransform>
-										<GradientStop Color="#19000000" />
-										<GradientStop Color="#00000000"
+                                                <TranslateTransform />
+                                            </TransformGroup>
+                                        </LinearGradientBrush.RelativeTransform>
+                                        <GradientStop Color="#19000000" />
+                                        <GradientStop Color="#00000000"
 													  Offset="1" />
-									</LinearGradientBrush>
-								</Rectangle.Fill>
-							</Rectangle>
-						</Grid>
+                                    </LinearGradientBrush>
+                                </Rectangle.Fill>
+                            </Rectangle>
+                        </Grid>
 
-					</Border>
-				</ControlTemplate>
+                    </Border>
+                </ControlTemplate>
 			</Setter.Value>
 		</Setter>
 	</Style>
